--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dropdown</title>
+    <title>Movenywere - SSN campus navigation</title>
 </head>
 <body>
     <form method="post" action="/">
